syntax = "proto3";

package message;

message UserMessage {
    string Name = 1;
    string Content = 2;
}

message NewUser {
    string Content = 1;
}

message AllMembers {
    repeated int64 Members = 1;
}

message JoinResponse {
    int32 Code = 1;
    string Result = 2;
}

//  protoc --gofast_out=. message.proto
//  pbjs  *.proto -t static-module -w closure -o ../../assets/Script/message.js